[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chronicle"
version = "0.1"
description = "Time line"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "colour",
    "pydantic~=1.10.2",
    "urllib3~=1.26.6",
    "matplotlib",
    "rich",
]

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "isort~=6.0.1",
    "flake8~=6.1.0",
    "pytest~=8.3.4",
]

[project.urls]
Homepage = "https://github.com/enzet/Chronicle"

[project.scripts]
chronicle = "chronicle.__main__:main"

[tool.setuptools]
packages = ["chronicle"]

[tool.black]
line-length = 80
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]
disallow_untyped_defs = true  # Report functions without type annotations.
disallow_untyped_decorators = true  # Ensure decorators have types.
warn_return_any = true  # Warn if return type is inferred as `Any`.
